# LeafPython

./: .gitignore  .gitmodules  LICENSE  README.md
demo/file_mode/: CMakeLists.txt  main.c
demo/repl_mode/: CMakeLists.txt  main.c
module/c/test_c/: test_c.c
src/: CMakeLists.txt
src/api/: leafpy_api.h  leafpy_cfg.h
src/core/: controller.c  controller.h
src/core/leafpy/: ctrl_leafpy.c  ctrl_leafpy.h  leafpy_bc.h  leafpy_compiler.h  leafpy_core.h  leafpy_parser.h  leafpy_vm.h
src/core/testcore/: Readme.md  builtin_funcs.h  ctrl_testcore.c  ctrl_testcore.h  test_bc.c  test_bc.h  test_compiler.c  test_compiler.h  test_core.c  test_core.h  test_data.c  test_data.h  test_frame.c  test_frame.h  test_gc.c  test_gc.h  test_obj_type.h  test_parser.c  test_parser.h  test_vm.c  test_vm.h
src/inc/: plat.h  register.h
src/lib/: error.h  error_code.h  libstr.c  libstr.h  list.c  list.h  log.c  log.h  mm.c  mm.h  type.h
src/plat/: plat.h
src/service/: register.c  service.c
